fix: fix edge case on firefox that layer composition occasionally fail

--- a/packages/veui-theme-dls/components/dialog.less
+++ b/packages/veui-theme-dls/components/dialog.less
@@ -125,6 +125,9 @@
       color: @dls-dialog-body-font-color;
       overflow: auto;
 
+      /* To workaround an edge case which triggers composition problems on Firefox */
+      transform-style: preserve-3d;
+
       [ui~="s"] & {
         font-size: @dls-dialog-body-font-size-s;
       }
